# radish

./: .gitignore  Cargo.toml  README.md
radip/: Cargo.toml
radip/data/: datc.md  datc.txt  script.js  std.json
radip/src/: base.rs  builtin.rs  core.rs  lib.rs  paradox.rs  test.rs  utils.rs
radish/: Cargo.toml  README.md  Rocket.toml  Shuttle.toml  package-lock.json  package.json  vite.config.ts
radish/pages/: create_game.html  create_variant.html  error.html  home.html  new_variant.html  new_variant_2.html  signin.html  variant.html
radish/pages/components/: head.html  header.html
radish/pages/game/: index.html  svelte.config.js
radish/pages/game/src/: App.svelte  defs.ts
radish/src/: games.rs  main.rs  new_variant.rs
radish/static/: style.css
src/: main.rs
src/adj/: mod.rs
