[package]
name = "radish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  {version = "0.5", features = [ "json" ] }
radip = { path = "../radip" }
google_auth_verifier = "0.1.4"
dashmap = "6.0"
litem = { git = "https://github.com/Allen-B1/litem.git" }
roxmltree = "0.20"
serde_json = "1"
base64 = "0.22"
shuttle-runtime = "0.47.0"
shuttle-rocket = "0.47.0"
